[package]
name = "kuma-control"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kc"
path = "kontrol/src/main.rs"

[workspace]
members = [
    "api",
    "config",
    "http",
    "services",
    "kontrol"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "http2", "json"], default-features = false }
colored = { version = "2.1" }
rpassword = { version = "7.3" }
#
# local crates
#
api = { path = "api" }
assets = { path = "assets" }
config = { path = "config" }
http = { path = "http" }
services = { path = "services" }
tenants = { path = "tenants" }

[dependencies]
colored = { workspace = true }
http = { workspace = true }
services = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
assets = { workspace = true }
api = { workspace = true }
tenants = { workspace = true }
